# EGG-Project

./: .gitignore  README.md
EGG-APP/: README.md
EGG-Chain/: Cargo.toml  README.md
EGG-Chain/crates/egg-chain/: Cargo.toml
EGG-Chain/crates/egg-chain/config/: chainspec.toml
EGG-Chain/crates/egg-chain/src/: block_builder.rs  chainspec.rs  lib.rs  mempool.rs  miner.rs  state.rs
EGG-Chain/crates/egg-crypto/: Cargo.toml
EGG-Chain/crates/egg-crypto/src/: lib.rs  merkle.rs
EGG-Chain/crates/egg-db/: Cargo.toml
EGG-Chain/crates/egg-db/src/: lib.rs  sled_kv.rs  store.rs
EGG-Chain/crates/egg-net/: Cargo.toml
EGG-Chain/crates/egg-net/src/: codec.rs  lib.rs  peer.rs  protocol.rs
EGG-Chain/crates/egg-node/: Cargo.toml
EGG-Chain/crates/egg-node/src/: lib.rs  main.rs
EGG-Chain/crates/egg-node/tests/: smoke.rs
EGG-Chain/crates/egg-rpc/: Cargo.toml
EGG-Chain/crates/egg-rpc/src/: lib.rs
EGG-Chain/crates/egg-types/: Cargo.toml
EGG-Chain/crates/egg-types/src/: lib.rs
EGG-Kernel/: README.md
EGG-OS/: README.md
