[workspace]
resolver = "2"
members = [
  "crates/egg-types",
  "crates/egg-crypto",
  "crates/egg-db",
  "crates/egg-chain",
  "crates/egg-net",
  "crates/egg-rpc",
  "crates/egg-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0 license"
rust-version = "1.75"
publish = false